Spacing corrected again

--- a/style.css
+++ b/style.css
@@ -422,7 +422,7 @@ html {
   font-size: clamp(12px, 2.4vw, 20px);
   line-height: 1.6;
   letter-spacing: 7px;
-  margin: -70px 0 1.5rem 0; /* shorthand for top/right/bottom/left */
+  margin: 0 0 1.5rem 0; /* shorthand for top/right/bottom/left */
   display: inline-block;     /* allows top margin without forcing a break */
   text-align: center;        /* optional, looks nice if centered */
 }
@@ -546,7 +546,6 @@ mask-image: linear-gradient(to bottom,
   font-size: clamp(14px, 2.4vw, 20px);
   margin-bottom: 1.5rem;
   line-height: 1.6;
-  margin-top: -1rem;
   letter-spacing: 7px;
 }
 
